--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-tac-toe</title>
     <link rel="stylesheet" href="style.css">
-    <style src="app.js"></style>
+    <script src='app.js'></script>
 </head>
 <body>
     <div id="player-1-name">
@@ -30,15 +30,15 @@
     
     <button class="game-restart">Restart Game</button>
     <div class="board">
-        <div id="0" class="cell"></div>
-        <div id="1" class="cell"></div>
-        <div id="2" class="cell"></div>
-        <div id="3" class="cell"></div>
-        <div id="4" class="cell"></div>
-        <div id="5" class="cell"></div>
-        <div id="6" class="cell"></div>
-        <div id="7" class="cell"></div>
-        <div id="8" class="cell"></div>
+        <div class='cell' id="0"></div>
+        <div class='cell' id="1"></div>
+        <div class='cell' id="2"></div>
+        <div class='cell' id="3"></div>
+        <div class='cell' id="4"></div>
+        <div class='cell' id="5"></div>
+        <div class='cell' id="6"></div>
+        <div class='cell' id="7"></div>
+        <div class="cell" id="8"></div>
     </div>
 </body>
 </html>
