--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-tac-toe</title>
     <link rel="stylesheet" href="style.css">
-    <script src='app.js'></script>
 </head>
 <body>
+    <div id="playerText"></div>
     <div id="player-1-name">
     <form class="player-name"> 
         <div class="player-name-inputs">
@@ -29,7 +29,7 @@
     </div>
     
     <button class="game-restart">Restart Game</button>
-    <div class="board">
+    <div class="box">
         <div class='cell' id="0"></div>
         <div class='cell' id="1"></div>
         <div class='cell' id="2"></div>
@@ -40,5 +40,6 @@
         <div class='cell' id="7"></div>
         <div class="cell" id="8"></div>
     </div>
+    <script src='app.js'></script>
 </body>
 </html>
