--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <form class="player-name"> 
         <div class="player-name-inputs">
             <label for="player-title">Name</label>
-            <input id="player-title" type="text" name="title">
+            <input id="player-title2" type="text" name="title">
             <button class="player-name-button">Enter</button>
         </div>
     </form>
