--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="playerText"></div>
     <div id="player-1-name">
     <form class="player-name"> 
         <div class="player-name-inputs">
             <label for="player-title">Name</label>
             <input id="player-title" type="text" name="title">
-            <button class="player-name-button">Enter</button>
+            <button class="player-name-button" id="playerName1Btn">Enter</button>
         </div>
     </form>
     </div>
@@ -23,12 +22,12 @@
         <div class="player-name-inputs">
             <label for="player-title">Name</label>
             <input id="player-title2" type="text" name="title">
-            <button class="player-name-button">Enter</button>
+            <button class="player-name-button" id="playerName2Btn">Enter</button>
         </div>
     </form>
     </div>
     
-    <button class="game-restart">Restart Game</button>
+    <button class="game-restart" id="restart">Restart Game</button>
     <div class="box">
         <div class='cell' id="0"></div>
         <div class='cell' id="1"></div>
